Fixed footer layout issue

--- a/Production/wp-content/themes/lobban/sass/_core.scss
+++ b/Production/wp-content/themes/lobban/sass/_core.scss
@@ -276,26 +276,26 @@ time {
 	margin-top: 0;
 	}
 	
-.entry .profiles li {
+.profiles li {
 	display: inline-block;
 	margin: 0 0.6em 0.6em 0;
 	}
 	
-.entry .profiles li:last-child {
+.profiles li:last-child {
 	margin-right: 0;
 	}
 	
-.entry .profiles li a {
+.profiles li a {
 	color: #393234;
 	border: 0;
 	font-size: 1.8em;
 	}
 	
-.entry .profiles li a:hover {
+.profiles li a:hover {
 	color: #000;
 	}
 	
-.entry .profiles li a span {
+.profiles li a span {
 	display: none;
 	}
 	
